--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "main": "api.js",
   "scripts": {
     "start": "nodemon api.js",
-    "test": "test"
+    "test": "mocha"
   },
   "author": "Ian Basson",
   "license": "ISC",
   "dependencies": {
     "express": "4.18.2",
     "helmet": "7.1.0",
-    "octokit": "3.1.2"
+    "octokit": "3.1.2",
+    "request": "2.88.2"
   },
   "devDependencies": {
-    "nodemon": "3.0.3"
+    "chai": "5.0.3",
+    "mocha": "10.3.0",
+    "nodemon": "3.0.3",
+    "supertest": "6.3.4"
   }
 }
